--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -51,6 +51,7 @@ jobs:
           with:
             push: true
             tags: mishatar26/yamdb_final:latest
+            file: api_yamdb/Dockerfile
 
   deploy:
       runs-on: ubuntu-latest
