--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -49,9 +49,9 @@ jobs:
           # Пуш образа в Docker Hub 
           uses: docker/build-push-action@v2 
           with:
+            context: ./api_yamdb/
             push: true
             tags: mishatar26/yamdb_final:latest
-            file: api_yamdb/Dockerfile
 
   deploy:
       runs-on: ubuntu-latest
