--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -49,9 +49,9 @@ jobs:
           # Пуш образа в Docker Hub 
           uses: docker/build-push-action@v2 
           with:
-            context: ./api_yamdb/
             push: true
             tags: mishatar26/yamdb_final:latest
+            file: api_yamdb/Dockerfile
 
   deploy:
       runs-on: ubuntu-latest
@@ -74,10 +74,6 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
-            cd /app/api_yamdb
-            sudo docker-compose exec -T web python manage.py collectstatic --no-input
-            sudo docker-compose exec -T web python manage.py makemigrations reviews
-            sudo docker-compose exec -T web python manage.py migrate
   
   send_message:
     runs-on: ubuntu-latest
