--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -15,16 +15,12 @@ jobs:
 
     - name: Install dependencies
       run: | 
-        # обновление pip
         python -m pip install --upgrade pip 
-        # установка flake8 и его плагинов
-        # установка зависимостей
         pip install -r api_yamdb/requirements.txt 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
 
     - name: Test with flake8 and django tests
       run: |
-        # запуск проверки проекта по flake8
         python -m flake8
         pytest
 
@@ -34,19 +30,15 @@ jobs:
       needs: tests
       steps:
         - name: Check out the repo
-          # Проверка доступности репозитория Docker Hub для workflow
           uses: actions/checkout@v2 
         - name: Set up Docker Buildx
-          # Вызов сборщика контейнеров docker
           uses: docker/setup-buildx-action@v1 
         - name: Login to Docker 
-          # Запуск скрипта авторизации на Docker Hub
           uses: docker/login-action@v1 
           with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
         - name: Push to Docker Hub
-          # Пуш образа в Docker Hub 
           uses: docker/build-push-action@v2 
           with:
             push: true
@@ -56,6 +48,7 @@ jobs:
   deploy:
       runs-on: ubuntu-latest
       needs: build_and_push_to_docker_hub
+      if: github.ref == 'refs/heads/master'
       steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
